<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="@dimen/padding_big">

    <ImageView
        android:id="@+id/ivLogo"
        android:transitionName="logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="logo"
        android:text="@string/login_hello"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/text_size_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_marginTop="40dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:orientation="vertical"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:hint="@string/user"
                android:padding="@dimen/padding_normal"
                android:textColorHighlight="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColor="@color/colorBlack"
            android:orientation="vertical"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:padding="@dimen/padding_normal"
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_gravity="right"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login_text"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/text_size_medium"
                android:text="@string/signUp1"
                android:padding="@dimen/padding_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/signUp"
                android:layout_marginTop="@dimen/margin_normal"
                android:textColor="@color/colorTabSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>