<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.FragmentHome">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context=".MainScreenActivity"
        tools:ignore="UselessParent">
<!--        <include-->
<!--            android:id="@+id/toolbar"-->
<!--            layout="@layout/toolbar"-->
<!--            />-->
        <RelativeLayout
            android:id="@+id/layout"
            android:layout_below="@+id/toolbar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_big"
            android:background="@color/colorToolbar"
            >

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:layout_width="250dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/appName"
                    android:textSize="@dimen/text_size_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3D84BC"/>

                <TextView
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/banner"
                    android:layout_width="130dp"
                    android:layout_height="100dp"/>
            </LinearLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/txtSearch"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_search"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/margin_big"
            android:padding="@dimen/padding_normal"
            android:hint="@string/hint_search"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableEnd="@drawable/ic_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/txtSearch"
            android:layout_marginTop="@dimen/margin_big"
            android:id="@+id/rvMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>



</FrameLayout>